--- a/master.yml
+++ b/master.yml
@@ -362,64 +362,6 @@ Resources:
   # Define the launch configuration for each new instance
   ASGLaunchConfig:
     Type: 'AWS::AutoScaling::LaunchConfiguration'
-    # Metadata:
-    #   Comment: cloud-init script to handle docker installation
-    #   'AWS::CloudFormation::Init':
-    #     config:
-    #       packages:
-    #         yum:
-    #           git: []
-    #           docker: []
-    #       files:
-    #         /etc/cfn/cfn-hup.conf:
-    #           content: !Join 
-    #             - ''
-    #             - - |
-    #                 [main]
-    #               - stack=
-    #               - !Ref 'AWS::StackId'
-    #               - |+
-    #               - region=
-    #               - !Ref 'AWS::Region'
-    #               - |+
-    #           mode: '000400'
-    #           owner: root
-    #           group: root
-    #         /etc/cfn/hooks.d/cfn-auto-reloader.conf:
-    #           content: !Join 
-    #             - ''
-    #             - - |
-    #                 [cfn-auto-reloader-hook]
-    #               - |
-    #                 triggers=post.update
-    #               - >
-    #                 path=Resources.LaunchConfig.Metadata.AWS::CloudFormation::Init
-    #               - 'action=/opt/aws/bin/cfn-init -v '
-    #               - '         --stack '
-    #               - !Ref 'AWS::StackName'
-    #               - '         --resource LaunchConfig '
-    #               - '         --region '
-    #               - !Ref 'AWS::Region'
-    #               - |+
-
-    #               - |
-    #                 runas=root
-    #           mode: '000400'
-    #           owner: root
-    #           group: root
-    #       sources:
-    #         /app: !Sub ${AppSource}/tarball/${AppBranch}
-    #       services:
-    #         sysvinit:
-    #           cfn-hup:
-    #             enabled: 'true'
-    #             ensureRunning: 'true'
-    #             files:
-    #               - /etc/cfn/cfn-hup.conf
-    #               - /etc/cfn/hooks.d/cfn-auto-reloader.conf
-    #           docker:
-    #             enabled: 'true'
-    #             ensureRunning: 'true'
     Properties:
       ImageId: !FindInMap [ AWSRegionArch2AMI, !Ref 'AWS::Region', !FindInMap [ AWSInstanceType2Arch, !Ref InstanceType, Arch ]]
       SecurityGroups: [ !Ref EC2SecurityGroup ]
@@ -427,41 +369,25 @@ Resources:
       UserData: !Base64 
         'Fn::Join':
           - ''
-          - - |
+          - - |+
               #!/bin/bash -xe
-            - |
               yum update -y aws-cfn-bootstrap
-            # - '/opt/aws/bin/cfn-init -v '
-            # - '         --stack '
-            # - !Ref 'AWS::StackName'
-            # - '         --resource LaunchConfig '
-            # - '         --region '
-            # - !Ref 'AWS::Region'
-            # - |+
-              
-            - |
               sudo yum install -y git docker
-            - |
               sudo systemctl enable docker
-            - |
               sudo systemctl start docker
-            - 'sudo git clone '
-            - !Sub ${AppSource} /app
-            - |+
 
-            - |
+            - !Sub sudo git clone ${AppSource} /app
+            - |+
+            
               cd /app
+
             - 'sudo git checkout '
             - !Sub ${AppBranch}
             - |+
 
-            - |
               sudo git submodule update --init --recursive
-            - |
               sudo docker build -t app:latest /app
-            - |
               sudo docker run -d -p 80:80 --restart=always app:latest
-            - |+
               
             - '/opt/aws/bin/cfn-signal -e $? '
             - '         --stack '
